FEAT[style]: ADD image resources and UI styling
Images resources were added and linked, with animated characters
to display depending on the result and stage of the game.
Style for buttons were added, and image shadow responses
for round wins, loses, and ties

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     padding: 0;
     border: 0;
     box-sizing: border-box;
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 }
 
 header,
@@ -14,12 +14,19 @@ footer {
     text-align: center;
 }
 
+header {
+    background-color: lightskyblue;
+    color: #ffffee;
+    font-weight: 1000;
+    font-size: 32px;
+}
 main {
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 10px;
     
 }
 
@@ -30,39 +37,82 @@ body {
     flex-direction: column;
 }
 
+#scoreBoard {
+    display: flex;
+    gap: 10px;
+}
+
 .hidden {
     display: none;
 }
 
 .billboard {
     height: 250px;
-    width: 400px;
+    width: 450px;
     display: flex;
     justify-content: center;
+    align-items: flex-end;
+    margin-bottom: 20px;
 }
 
-/* #imgCharacters {
-    height: 250px;
-} */
 
 #msgBoard {
     font-size: 28px;
     font-weight: 700;
 }
 
-.scoreBoard {
-    display: flex;
-}
 
 .scoreHeader {
-    font-size: 18px;
+    font-size: 22px;
     font-weight: 500;
+    width: 160px;
+    text-align: center;
+}
+
+.scorePoints {
+    font-size: 32px;
+    font-weight: 700;
+    text-align: center;
 }
 
 button {
-    padding: 8px 24px;
+    width: 85px;
+    height: 35px;
+    font-size: 16px;
+    font-weight: 900;
+    color: #ffffee;
+    background-color: lightskyblue;
+    border-radius: 5px;
+}
+
+#btnRock {
+    background-color: #efb475;
+    color: white;
+}
+
+#btnPaper {
+    background-color: #efefef;
+    color: #373c3f;
 }
 
 img {
+    box-shadow: 1px 2px 5px rgb(189, 189, 189);
+    max-height: 250px;
+}
+
+#imgCharacters {
     height: 250px;
+}
+
+.playButtons {
+    display: flex;
+    gap: 10px;
+}
+
+.successShadow {
+    box-shadow: 1px 2px 10px 3px rgb(149, 255, 149);
+}
+
+.defeatShadow {
+    box-shadow: 1px 2px 10px 3px rgb(255, 152, 149);
 }
